<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="Radio mode" >

        <!-- Hspa modes -->
        <com.cyanogenmod.settings.device.Hspa
            android:defaultValue="0"
            android:entries="@array/hspa_entries"
            android:entryValues="@array/hspa_entries_values"
            android:key="hspa"
            android:summary="@string/hspa_summary_head"
            android:title="@string/hspa_title_head" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/accelerometer_subcat_title" >

        <!-- Use sensor calibration -->
        <CheckBoxPreference
            android:key="use_accelerometer_calibration"
            android:summary="@string/use_accelerometer_calibration_summary_head"
            android:title="@string/use_accelerometer_calibration_title_head" />

        <!-- Do accelerometer calibration -->
        <Preference
            android:key="calibrate_accelerometer"
            android:summary="@string/calibrate_accelerometer_summary_head"
            android:title="@string/calibrate_accelerometer_title_head" />
    </PreferenceCategory>

   
    <PreferenceCategory android:title="@string/vibrator_subcat_title" >
        <com.cyanogenmod.settings.device.VibratorIntensity
            android:defaultValue="50"
            android:entries="@array/vibrator_intensity_entries"
            android:entryValues="@array/vibrator_intensity_entries_values"
            android:key="vibrator_intensity"
            android:summary="@string/vibrator_intensity_summary_head"
            android:title="@string/vibrator_intensity_title_head" />
    </PreferenceCategory>

<PreferenceCategory android:title="@string/advanced_subcat_title" >

    <com.cyanogenmod.settings.device.DeepestSleepState
        android:defaultValue="2"
        android:entries="@array/deepest_sleep_states_entries"
        android:entryValues="@array/deepest_sleep_states_entries_values"
        android:key="deepest_sleep_state"
        android:summary="@string/deepest_sleep_summary_head"
        android:title="@string/deepest_sleep_title_head" />

</PreferenceCategory>

</PreferenceScreen>